--- a/fp.vcxproj.filters
+++ b/fp.vcxproj.filters
@@ -73,7 +73,7 @@
     <None Include="res\jmnco.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="ReadMe.txt" />
+    <None Include="ReadMe.md" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="fp.rc">
